--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Your Project Name</title>
-<meta property="og:title" content=Your Project Name" />
+<title>Virtual Try-on (VTON)</title>
+<meta property="og:title" content="Your Project Name" />
 <meta name="twitter:title" content="Your Project Name" />
 <meta name="description" content="Your project about your cool topic described right here." />
 <meta property="og:description" content="Your project about your cool topic described right here." />
@@ -22,8 +22,7 @@
 <div class="nd-pageheader">
  <div class="container">
  <h1 class="lead">
- <nobr class="widenobr">Your Project Name</nobr>
- <nobr class="widenobr">For CS 7150</nobr>
+ <nobr class="widenobr">Virtual Try-on (VTON)</nobr>
  </h1>
  </div>
 </div><!-- end nd-pageheader -->
@@ -31,25 +30,39 @@
 <div class="container">
 <div class="row">
 <div class="col justify-content-center text-center">
-<h2>Are Artificial Neural Networks Modular?</h2>
+<h2>Style-based Global Appearance Flow For Virtual Try-On</h2>
 <p>This is a great place to pose the big question that interests your group.</p>
 </div>
 </div>
 <div class="row">
 <div class="col">
 
-<h2>Related Work</h2>
+<h2>Motivation</h2>
 
 <p><a href="#bottou-1990">Bottou, et al (1990) [1]</a>
-wrote a cool paper which, as an example, could be the focus of your project,
-and this is a great place to talk about the prior work.
-They claimed that neural networks could be expressed as a modular architecture,
-and in this project you explore their claim in detail by implementing a new modular
-framework for creating neural networks that we call <em>Torch</em>.  (Actually,
-Torch really was developed ten years after Bottou's paper to explore his ideas.)
+  Doing our internship in Retail companies (Amazon and Walmart) this summer, 
+  made us think alike and want to go deeper into computer vision and deep 
+  learning applications in retail. We thought of working on improving 
+  Virtual Mirrors to enhance customer personalization and experience. 
+  Virtual mirrors are becoming the central focus of personalization and 
+  customer experience enhancement in retail. It is basically a traditional
+  mirror with a display behind the glass. Powered with computer vision cameras
+  and AR, these mirrors can display a broad range of contextual information, 
+  which, in turn, helps buyers connect with the brand better. This ML-based 
+  engine provides its users with real-time fashion recommendations by observing 
+  their current outfits. 
+
 </p>
+<h2>Abstract</h2>
+<h2>About Models</h2>
+<h2>About Data</h2>
+<h2>Team Members</h2>
+<h2>Literature Survey</h2>
+<h2>Major Challenges</h2>
+<h2>Potential Contributions</h2> 
 
 <h3>References</h3>
+
 
 <p><a name="bottou-1990">[1]</a> <a href="https://papers.baulab.info/Bottou-1990.pdf"
   >L&eacute;on Bottou and Patrick Gallinari.
@@ -59,7 +72,7 @@ Torch really was developed ten years after Bottou's paper to explore his ideas.)
 
 <h2>Team Members</h2>
                                                    
-<p>Here is who is on the team.</p>
+<p>Jivesh Poddar, Neha Cholera, Dhruvi Gajjar</p>
 
   
 </div><!--col-->
