--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   customer experience enhancement in retail. It is basically a traditional
   mirror with a display behind the glass. Powered with computer vision cameras
   and AR, these mirrors can display a broad range of contextual information, 
-  which, in turn, helps buyers connect with the brand better. This ML-based 
+  which, in turn, helps buyers connect with brand better. This ML-based 
   engine provides its users with real-time fashion recommendations by observing 
   their current outfits. 
 
