--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ GANs are computationally expensive, as high graphic computing is required to gen
 <h4>In the following, we present the most important goals we have identified in the literature. 
   We plan to solve some of these in the due course of time.</h4>
 <h3> Goal 1 - Outfit Generation: </h3>
-<p> The goal of this task is, given a fashion item 'xq' (e.g., skirt) representing the user's current interest, find the best item x ∈ I (e.g., shirt) or the fashion outfit F ∈ I (e.g., shirt, pants, hat) that goes/go well with the input query.</p>
+<p> The goal of this task is, given a fashion item 'xq' (e.g., skirt) representing the user's current interest, find the best item x belgongs I (e.g., shirt) or the fashion outfit F belongs I (e.g., shirt, pants, hat) that goes/go well with the input query.</p>
 
 <h3> Goal 2 - Outfit Recommendation </h3>
 <p> 
@@ -185,7 +185,7 @@ GANs are computationally expensive, as high graphic computing is required to gen
   compatibility modeling. </p>
 <h3> Goal 4 - Fill In the Blank (FITB): </h3>
 <p>
-  This goal is used in a setting where we are given an incomplete outfit F - (e.g., shirt, pants, accessories) with a missing item (e.g., shoes), and the method must find the best missing fashion item x ∈ {x1, x2, x3, x4} 
+  This goal is used in a setting where we are given an incomplete outfit F - (e.g., shirt, pants, accessories) with a missing item (e.g., shoes), and the method must find the best missing fashion item x belongs to {x1, x2, x3, x4} 
   from multiple choices where F = {F -, x} has fashion items, which are compatible visually. This is a convenient scenario in real life, e.g., a user wants to choose a pair of shoes to suit his pants and jacket. </p>
 
 <h3>References</h3>
