--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Virtual Try-on (VTON)</title>
+<title>Virtual Try-on (VTON) Progress</title>
 <meta property="og:title" content="Your Project Name" />
 <meta name="twitter:title" content="Your Project Name" />
 <meta name="description" content="Your project about your cool topic described right here." />
@@ -22,15 +22,25 @@
 <div class="nd-pageheader">
  <div class="container">
  <h1 class="lead">
- <nobr class="widenobr">Virtual Try-on (VTON)</nobr>
+ <nobr class="widenobr">Virtual Try-on (VTON) Progress</nobr>
  </h1>
  </div>
 </div><!-- end nd-pageheader -->
-
+<nav>  
+  <ul>  
+  <li>  
+  <a href=""> Home </a>  
+  </li>  
+  <li>  
+  <a href="/Users/dhruvigajjar/Desktop/DeeplearningProject/Deep-Learning/progress.html"> Progress </a> 
+   
+  </li>  
+  </ul>  
+  </nav>
 <div class="container">
 <div class="row">
 <div class="col justify-content-center text-center">
-<h2>Style-based Global Appearance Flow For Virtual Try-On</h2>
+<h2>Progress Style-based Global Appearance Flow For Virtual Try-On</h2>
 </div>
 </div>
 <div class="row">
@@ -142,6 +152,8 @@ GANs are computationally expensive, as high graphic computing is required to gen
   relying on 3D measurements to accomplish perfect clothing simulation. 
 
 </p>
+<h2>Progress update</h2>
+
 <h2>Major Challenges</h2>
 <h3>Fashion Item Representation: </h3>
 <p>
