--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <a href=""> Home </a>  
   </li>  
   <li>  
-  <a href="https://expo.baulab.info/Users/dhruvigajjar/Desktop/DeeplearningProject/Deep-Learning/progress.html"> Progress </a> 
+  <a href="/progress.html"> Progress </a> 
    
   </li>  
   </ul>  
