--- a/progress.html
+++ b/progress.html
@@ -32,7 +32,7 @@
   <a href="index.html"> Home </a>  
   </li>  
   <li>  
-  <a href="https://expo.baulab.info/Users/dhruvigajjar/Desktop/DeeplearningProject/Deep-Learning/progress.html"> Progress </a>  
+  <a href="https://github.com/dhruvigajjar/Deep-Learning/blob/main/progress.html"> Progress </a>  
   </li>  
   </ul>  
   </nav>
