--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <a href=""> Home </a>  
   </li>  
   <li>  
-  <a href="/progress.html"> Progress </a> 
+  <a href="https://github.com/dhruvigajjar/Deep-Learning/blob/main/progress.html"> Progress </a> 
    
   </li>  
   </ul>  
