--- a/index.html
+++ b/index.html
@@ -28,19 +28,15 @@
 </div><!-- end nd-pageheader -->
 <nav>  
   <ul>  
-  <li>  
-  <a href=""> Home </a>  
-  </li>  
-  <li>  
-  <a href="https://expo.baulab.info/2022-Fall/dhruvigajjar//progress.html"> Progress </a> 
-   
-  </li>  
+  <li> <a href=""> Home </a>  </li>  
+  <li> <a href="https://expo.baulab.info/2022-Fall/dhruvigajjar/progress.html"> Progress </a> </li>
+  <li> <a href="https://expo.baulab.info/2022-Fall/dhruvigajjar/final.html"> Final </a> </li>
   </ul>  
-  </nav>
+</nav>
 <div class="container">
 <div class="row">
 <div class="col justify-content-center text-center">
-<h2>Progress Style-based Global Appearance Flow For Virtual Try-On</h2>
+<h2> Style-based Global Appearance Flow For Virtual Try-On</h2>
 </div>
 </div>
 <div class="row">
