--- a/progress.html
+++ b/progress.html
@@ -33,7 +33,9 @@
   </li>  
   <li>  
   <a href="https://expo.baulab.info/2022-Fall/dhruvigajjar/progress.html"> Progress </a>  
-  </li>  
+  
+  </li> 
+  <li> <a href="https://expo.baulab.info/2022-Fall/dhruvigajjar/final.html"> Final </a> </li> 
   </ul>  
   </nav>
 <div class="container">
