--- a/final.html
+++ b/final.html
@@ -28,7 +28,7 @@
 </div><!-- end nd-pageheader -->
 <nav>  
   <ul>  
-  <li> <a href=""> Home </a>  </li>  
+  <li> <a href="index.html"> Home </a>  </li>  
   <li> <a href="https://expo.baulab.info/2022-Fall/dhruvigajjar/progress.html"> Progress </a> </li>
   <li> <a href="https://expo.baulab.info/2022-Fall/dhruvigajjar/final.html"> Final </a> </li>
   </ul>  
