--- a/final.html
+++ b/final.html
@@ -271,6 +271,10 @@ is merged in the Mask composition page to output the final result. This module i
         items via relational networks. 
 
     </p>
+    <h2>PDF <iframe src="DeepLearning_Presentation.pdf" width="100%" height="500px">
+    </iframe> </h2>
+    <h2>Team Members and Contribution</h2>
+    <p>Each member of our group has significantly contributed to the project using their expertise. Dhruvi and Neha took ownership of research, EDA and Data analysis. Jivesh took ownership of the modeling part. But at each step we kept each other updated and took decisions collectively. </p>
     <h2>References</h2>
     <p><a name="A Review">[1]</a> <a href="https://arxiv.org/pdf/2202.02757.pdf">A Review of Modern Fashion Recommender Systems</a>
     </p>
